# inheritance-calculator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MIGRATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  calculation.py  cases.py  chat.py  utils.py
backend/app/core/: __init__.py  config.py
backend/app/schemas/: __init__.py  calculation_schema.py  case_schema.py  date_schema.py  person_schema.py
backend/app/services/: calculation_service.py  era_converter.py  neo4j_service.py
backend/tests/: test_api_cases.py  test_api_utils.py  test_integration.py
docs/: PHASE4_COMPLETION.md  WEB_UI_EXTENSION_PROPOSAL.md  WEB_UI_SPECIFICATION.md  architecture.md  retransfer_inheritance.md  setup_summary.md  user_guide.md
examples/: README.md  demo_basic_cases.py  demo_complex_cases.py  demo_contact_collection.py  demo_interactive.py  family_tree  family_tree.mmd  family_tree.txt  report.md  sample_complex.json  sample_csv_basic.csv  sample_csv_complex.csv  sample_input.json  template.csv
openspec/: project.md
openspec/changes/archive/2025-10-16-fix-retransfer-calculation/: proposal.md  tasks.md
openspec/changes/archive/2025-10-16-fix-retransfer-calculation/specs/inheritance-calculation/: spec.md
openspec/changes/improve-cli-ui-experience/: design.md  proposal.md  tasks.md
openspec/changes/improve-cli-ui-experience/specs/cli-interface/: spec.md
openspec/changes/improve-cli-ui-experience/specs/data-models/: spec.md
openspec/changes/improve-code-quality-and-type-safety/: changelog.md  proposal.md  tasks.md
openspec/changes/improve-code-quality-and-type-safety/specs/code-quality/: spec.md
openspec/changes/improve-test-coverage-and-neo4j/: design.md  proposal.md  tasks.md
openspec/changes/improve-test-coverage-and-neo4j/specs/neo4j-integration/: spec.md
openspec/changes/improve-test-coverage-and-neo4j/specs/testing/: spec.md
openspec/specs/inheritance-calculation/: spec.md
src/agents/: interview_agent.py  ollama_client.py
src/cli/: __init__.py  ascii_tree.py  commands.py  contact_input.py  csv_parser.py  display.py  family_tree_generator.py  main.py  prompts.py  report_generator.py  session.py
src/database/: base.py  neo4j_client.py  queries.py  repositories.py
src/models/: inheritance.py  person.py
src/services/: base.py  heir_validator.py  inheritance_calculator.py  neo4j_service.py
src/utils/: config.py  exceptions.py
tests/: conftest.py
tests/test_cli/: __init__.py  test_ascii_tree.py  test_commands.py  test_contact_input.py  test_csv_parser.py  test_display.py  test_display_progress.py  test_family_tree_generator.py  test_main.py  test_prompts.py  test_report_generator.py  test_session.py
tests/test_database/: conftest.py  test_neo4j_client.py  test_repositories.py
tests/test_models/: test_inheritance.py  test_person.py  test_person_contact.py  test_relationship.py
tests/test_services/: test_heir_validator.py  test_inheritance_calculator.py  test_neo4j_service.py  test_retransfer_inheritance.py  test_retransfer_renunciation.py
tests/test_utils/: __init__.py  test_config.py  test_era_converter.py  test_logger.py
