[project]
name = "inheritance-calculator"
version = "0.1.0"
description = "日本の民法に基づく相続人資格と相続割合の自動計算システム"
authors = [
    { name = "Kawahara", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["inheritance", "law", "japan", "neo4j", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "agnos~=1.0.2",
    "graphviz>=0.21",
    "markdown>=3.9",
    "neo4j~=6.0.2",
    "ollama~=0.6.0",
    "pydantic~=2.11.9",
    "pydantic-settings~=2.11.0",
    "python-dotenv~=1.1.1",
    "reportlab>=4.4.4",
    "rich~=14.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-cov~=4.0.0",
    "mypy~=1.8.0",
    "ruff~=0.1.0",
    "black>=24.0.0",
]

[project.scripts]
inheritance = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# 外部ライブラリの型スタブがない場合は警告を無視
[[tool.mypy.overrides]]
module = [
    "reportlab.*",
    "graphviz.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=html --cov-report=term-missing"
