[project]
name = "inheritance-calculator-cli"
version = "1.0.0"
description = "日本の民法に基づく相続計算のCLIアプリケーション"
authors = [
    { name = "Kawahara", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["inheritance", "law", "japan", "cli", "calculator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Environment :: Console",
]
dependencies = [
    "inheritance-calculator-core[agents] @ git+https://github.com/kazumasakawahara/inheritance-calculator-core.git@main",
    "graphviz>=0.21",
    "markdown>=3.9",
    "reportlab>=4.4.4",
    "rich~=14.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-cov~=4.0.0",
    "mypy~=1.8.0",
    "ruff~=0.1.0",
    "black>=24.0.0",
]

[project.scripts]
inheritance-calc = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# 外部ライブラリの型スタブがない場合は警告を無視
[[tool.mypy.overrides]]
module = [
    "reportlab.*",
    "graphviz.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=html --cov-report=term-missing"
